Comment section added

--- a/index.html
+++ b/index.html
@@ -243,6 +243,72 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="header-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <!-- put an image with a caption on it -->
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="person-on-a-boat"
+                class="story__image"
+              />
+              <figcaption class="story__caption">Sana Sadat</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tritiary">
+                I had the best weekened with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
+                unde? Reprehenderit, officiis provident? Aliquam voluptas
+                recusandae tenetur numquam! Molestias quidem quod consequatur
+                fuga nisi porro? Deserunt excepturi hic sint consectetur.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <!-- put an image with a caption on it -->
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="person-on-a-boat"
+                class="story__image"
+              />
+              <figcaption class="story__caption">Zabi Sidiqi</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tritiary">WOW! My life is different now</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
+                unde? Reprehenderit, officiis provident? Aliquam voluptas
+                recusandae tenetur numquam! Molestias quidem quod consequatur
+                fuga nisi porro? Deserunt excepturi hic sint consectetur.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text">Discover all tours &rarr;</a>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="gird-test">
