--- a/index.html
+++ b/index.html
@@ -309,7 +309,75 @@
           <a href="#" class="btn-text">Discover all tours &rarr;</a>
         </div>
       </section>
+
+      <section class="section-book">
+        <div class="book">
+          <div class="book__form">
+
+            <form action="#" class="form">
+
+              <div class=" u-margin-bottom-medium">
+                <h2 class="header-secondary">Start booking now </h2>
+              </div>
+      
+              <div class="form__group">
+                <input id="name" class="form__input" type="text" placeholder="Full Name" required></input>
+                <label for="name" class="form__label">Full name</label>
+              </div>
+
+              <div class="form__group">
+                <input id="email" class="form__input" type="email" placeholder="Email address" required></input>
+                <label for="email" class="form__label">email address</label>
+              </div>
+
+              <div class="form__group">
+                <div class="form__radio-group">
+                <input id="small" class="form__radio-input" type="radio"  name="size"></input>
+                <label for="small" class="form__radio-label">
+                <span class="form__radio-button"></span>
+                small tour group</label>
+              </div>
+
+              <div class="form__radio-group">
+                <input id="large" class="form__radio-input" type="radio"  name="size"></input>
+                <label for="large" class="form__radio-label">
+                <span class="form__radio-button"></span>
+                large tour group</label>
+              </div>
+              <button class="btn btn--green u-margin-top-medium">Next step&rarr;</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-1x.png" alt="logo" class="footer__logo">
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+          Build my <a href="#" class="footer__link">Najim Sadat </a> for his online service <a href="#" class="footer__link">Building a webpage</a>. Copyright &copy; by S.Najimullah Sadat. You are 100% allowed to use this webpage for personal use only. But NOT to claim it as your own design. A credit to the original author, Najim Sadat , is of course highly appreciated! 
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <!-- <section class="gird-test">
       <div class="row">
