--- a/index.html
+++ b/index.html
@@ -86,7 +86,27 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img
+
+              <img  alt="photo 1" srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w "
+                sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px"
+                class="composition__photo composition__photo--ph1"
+                src="img/nat-1-large.jpg"
+              >
+
+              <img  alt="photo 2" srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w "
+                sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px"
+                class="composition__photo composition__photo--ph2"
+                src="img/nat-2-large.jpg"
+              >
+
+              <img  alt="photo 3" srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w "
+                sizes="(max-width:900px) 20vw, (max-width: 600px) 30vw, 300px"
+                class="composition__photo composition__photo--ph3"
+                src="img/nat-3-large.jpg"
+              >
+
+
+              <!-- <img
                 src="img/nat-1-large.jpg"
                 alt=""
                 class="composition__photo composition__photo--ph1"
@@ -98,7 +118,7 @@
                 src="img/nat-3-large.jpg"
                 alt=""
                 class="composition__photo composition__photo--ph3"
-              />
+              /> -->
             </div>
           </div>
         </div>
@@ -158,8 +178,8 @@
           </div>
         </div>
       </section>
-
-      <section class="section-tours">
+ 
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="header-secondary">Most popular tours</h2>
         </div>
@@ -190,7 +210,7 @@
                     <p class="card__price-only u-margin-bottom-small">only</p>
                     <p class="card__price-value">297$</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -221,7 +241,7 @@
                     <p class="card__price-only u-margin-bottom-small">only</p>
                     <p class="card__price-value">497$</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -252,7 +272,7 @@
                     <p class="card__price-only u-margin-bottom-small">only</p>
                     <p class="card__price-value">697$</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -293,10 +313,7 @@
                 I had the best weekened with my family
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-                unde? Reprehenderit, officiis provident? Aliquam voluptas
-                recusandae tenetur numquam! Molestias quidem quod consequatur
-                fuga nisi porro? Deserunt excepturi hic sint consectetur.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, unde? Reprehenderit, officiis provident? Aliquam voluptas recusandae tenetur numquam!
               </p>
             </div>
           </div>
@@ -316,10 +333,7 @@
             <div class="story__text">
               <h3 class="heading-tritiary">WOW! My life is different now</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-                unde? Reprehenderit, officiis provident? Aliquam voluptas
-                recusandae tenetur numquam! Molestias quidem quod consequatur
-                fuga nisi porro? Deserunt excepturi hic sint consectetur.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, unde? Reprehenderit, officiis provident? Aliquam voluptas recusandae tenetur numquam!
               </p>
             </div>
           </div>
@@ -375,7 +389,13 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-1x.png" alt="logo" class="footer__logo">
+
+        <picture class="footer__logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="logo" class="footer__logo">
+
+        </picture>
+
       </div>
 
       <div class="row">
@@ -399,7 +419,27 @@
       </div>
     </footer>
 
-    <!-- <section class="gird-test">
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img class="popup__img"  src="img/nat-8.jpg" alt="">
+          <img class="popup__img" src="img/nat-9.jpg" alt="">
+        </div>
+        <div class="popup__right">
+      <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="header-secondary u-margin-bottom-medium">Start booking now</h2>
+          <h3 class="header-tritiary u-margin-bottom-small">IMPORTANT &ndash; Please read the terms and conditioon.</h3>
+          <p class="popup__text">Lorem ipsum dolor sit amet Lorem Lorem  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero unde itaque sed nesciunt necessitatibus commodi ad quidem tempora. Excepturi libero aliquam soluta deleniti dolorem adipisci, cumque minus veniam commodi iusto. ipsum dolor, sit amet consectetur adipisicing elit. Quo iusto obcaecati odit totam aperiam laboriosam quos similique officiis, repudiandae illo, suscipit libero exercitationem? Aut nisi consequuntur modi voluptatibus, repellendus corrupti! ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore  sdam quod recusandae totam iste dolore. consectetur adipisicing elit. Quae repellat nisi ullam, nihil eum cum veniam aliquam incidunt reiciendis quos. Voluptatum numquam, excepturi facilis quia eligendi laboriosam dolor ducimus beatae! </p>
+        
+          <button class="btn btn--green">Book now</button>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+
+
+ <!-- <section class="gird-test">
       <div class="row">
         <div class="col-1-of-2">col 1 of 2</div>
         <div class="col-1-of-2">col 1 of 2</div>
@@ -434,5 +474,3 @@
         <div class="col-1-of-4">col 1 of 4</div>
       </div>
     </section> -->
-  </body>
-</html>
